force-app/main/default/objects/Project_Sign_Off__c/Project_Sign_Off__c.object-meta.xml
<CustomObject>
    <label>Project Sign Off</label>
    <nameField>
        <displayFormat>PSO-{0000}</displayFormat>
        <label>Project Sign Off Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Sign Offs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>