force-app/main/default/objects/Project_Sign_Off__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Project Sign Offs (Approved By)</relationshipLabel>
    <relationshipName>Project_Sign_Offs_Approved_By</relationshipName>
    <type>Lookup</type>
</CustomField>