force-app/main/default/objects/Project_Sign_Off__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Project Sign Offs</relationshipLabel>
    <relationshipName>Project_Sign_Offs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>