force-app/main/default/objects/Project_Sign_Off__c/fields/Sign_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Sign_Off_Status__c</fullName>
    <label>Sign Off Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>