force-app/main/default/objects/Project_Sign_Off__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Discovery</fullName><default>false</default><label>Discovery</label></value>
            <value><fullName>Requirement Gathering</fullName><default>false</default><label>Requirement Gathering</label></value>
            <value><fullName>Requirement Documentation</fullName><default>false</default><label>Requirement Documentation</label></value>
            <value><fullName>User Story Finalization</fullName><default>false</default><label>User Story Finalization</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>