force-app/main/default/objects/Project_Sign_Off__c/recordTypes/VISEO_Project_Sign_Off.recordType-meta.xml
<RecordType>
    <fullName>VISEO_Project_Sign_Off</fullName>
    <active>true</active>
    <label>VISEO Project Sign Off</label>
</RecordType>